--- a/testbed.ipynb
+++ b/testbed.ipynb
@@ -9,13 +9,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch as pt\n",
-    "import tqdm\n",
+    "from scipy.linalg import qr\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
-    "from ml_lib.clusters.root_cluster import RootCluster as Root\n",
     "from ml_lib.clusters.data_cluster import DataCluster as Data\n",
     "from ml_lib.clusters.dense_cluster import DenseCluster as Dense\n",
+    "from ml_lib.controllers.controller import Controller as Control\n",
     "\n",
-    "from ml_lib.utils.loss_collapser import Linear\n",
+    "from ml_lib.utils import learners, inits, activators\n",
     "\n",
     "#pt.set_default_tensor_type('torch.FloatTensor')\n",
     "pt.set_default_tensor_type('torch.cuda.FloatTensor')"
@@ -23,71 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Controller():\n",
-    "    def __init__(self,\n",
-    "                 collapser = Linear\n",
-    "                ):\n",
-    "        self.clusters = {}\n",
-    "        self.Collapser = collapser()\n",
-    "        \n",
-    "    def add_cluster(self, cluster):\n",
-    "        if cluster.name in self.clusters.keys():\n",
-    "            raise Exception('Cluster names %s already in model' % cluster.name)\n",
-    "            \n",
-    "        self.clusters[cluster.name] = cluster\n",
-    "        \n",
-    "    def link_clusters(self, from_cluster_name, to_cluster_name, **kwargs):\n",
-    "        self.clusters[from_cluster_name].add_link(self.clusters[to_cluster_name], 'output', **kwargs)\n",
-    "        self.clusters[to_cluster_name].add_link(self.clusters[from_cluster_name], 'input', **kwargs)\n",
-    "        \n",
-    "    def add_link(self, cluster, link_cluster_name, link_type, **kwargs):\n",
-    "        self.add_cluster(cluster)\n",
-    "        if link_type == 'output':\n",
-    "            self.link_clusters(cluster.name, link_cluster_name, **kwargs)\n",
-    "        elif link_type == 'input':\n",
-    "            self.link_clusters(link_cluster_name, cluster.name, **kwargs)\n",
-    "        else:\n",
-    "            raise Exception('%s is not a valid link type, use \"input\" or \"output\"' % link_type)\n",
-    "        \n",
-    "    def init_clusters(self, reinit = False):\n",
-    "        for cluster in self.clusters.values(): cluster.init_cluster(reinit = reinit)\n",
-    "            \n",
-    "    def train_model(self, iters):\n",
-    "        t = tqdm.tnrange(iters)\n",
-    "        for epoc in t:\n",
-    "            self.learning_iter(t)\n",
-    "            \n",
-    "    def learning_iter(self, t):\n",
-    "        loss = self.get_loss()\n",
-    "        for cluster in self.clusters.values():\n",
-    "            cluster.learn(loss)\n",
-    "        t.set_postfix({'loss': loss.detach().cpu().numpy()})\n",
-    "            \n",
-    "    def get_loss(self):\n",
-    "        self.prime_clusters()\n",
-    "        losses = [cluster.get_loss() for cluster in self.clusters.values()]\n",
-    "        self.deprime_clusters()\n",
-    "        loss = self.Collapser.collapse(pt.stack([\n",
-    "            self.Collapser.collapse(loss_val)\n",
-    "            for loss_val in losses\n",
-    "            if loss_val is not None\n",
-    "        ]))\n",
-    "        return loss\n",
-    "            \n",
-    "    def prime_clusters(self, reprime = False):\n",
-    "        for cluster in self.clusters.values(): cluster.prime_cluster(reprime = reprime)\n",
-    "            \n",
-    "    def deprime_clusters(self):\n",
-    "        for cluster in self.clusters.values(): cluster.deprime_cluster()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,66 +38,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "control = Controller()\n",
+    "feature_cols = ['sqft_living', 'bedrooms', 'bathrooms']\n",
+    "target_cols = ['price']\n",
+    "\n",
+    "learner = learners.ADAM\n",
+    "learn_params = {\n",
+    "    'learn_rate': 1e-0,\n",
+    "    'scale_features': True\n",
+    "}\n",
+    "\n",
+    "init = inits.Orthogonal\n",
+    "init_params = {\n",
+    "    'xavier': True\n",
+    "}\n",
+    "\n",
+    "activator = activators.ReLU\n",
+    "activator_params = {}\n",
+    "\n",
+    "control = Control()\n",
     "control.add_cluster(\n",
-    "    Data('data_cluster', dataset[['price', 'bedrooms', 'bathrooms', 'sqft_living']])\n",
+    "    Data('data_cluster', dataset[feature_cols + target_cols])\n",
     ")\n",
     "control.add_link(\n",
-    "    Dense('reg_cluster', 1, learner_params = {'learn_rate': 1e-1}),\n",
-    "    'data_cluster', 'input', data_cols = ['sqft_living', 'bedrooms', 'bathrooms']\n",
+    "    Dense(\n",
+    "        'reg_cluster_1',\n",
+    "        512,\n",
+    "        weight_init = init, weight_init_params = init_params,\n",
+    "        activator = activator, activator_params = activator_params,\n",
+    "        learner = learner, learner_params = learn_params\n",
+    "    ),\n",
+    "    'data_cluster', 'input', data_cols = feature_cols\n",
     ")\n",
-    "control.link_clusters('reg_cluster', 'data_cluster', data_cols = ['price'])\n",
+    "control.add_link(\n",
+    "    Dense(\n",
+    "        'reg_cluster_2',\n",
+    "        128,\n",
+    "        weight_init = init, weight_init_params = init_params,\n",
+    "        activator = activator, activator_params = activator_params,\n",
+    "        learner = learner, learner_params = learn_params\n",
+    "    ),\n",
+    "    'reg_cluster_1', 'input'\n",
+    ")\n",
+    "control.add_link(\n",
+    "    Dense(\n",
+    "        'reg_cluster_3',\n",
+    "        32,\n",
+    "        weight_init = init, weight_init_params = init_params,\n",
+    "        activator = activator, activator_params = activator_params,\n",
+    "        learner = learner, learner_params = learn_params\n",
+    "    ),\n",
+    "    'reg_cluster_2', 'input'\n",
+    ")\n",
+    "control.add_link(\n",
+    "    Dense(\n",
+    "        'reg_cluster_out',\n",
+    "        1,\n",
+    "        weight_init = init, weight_init_params = init_params,\n",
+    "        learner = learner, learner_params = learn_params\n",
+    "    ),\n",
+    "    'reg_cluster_3', 'input'\n",
+    ")\n",
+    "control.link_clusters('reg_cluster_out', 'data_cluster', data_cols = target_cols)\n",
     "control.init_clusters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d7d222e9c8e4997af6847c576f63689",
+       "model_id": "ed98cdde6f984c908476bd35cd316420",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10000), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=1000), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "control.train_model(10000)"
+    "control.train_model(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'weights': tensor([[ 263.3921],\n",
-       "         [-184.4671],\n",
-       "         [ -25.5456]]), 'bias': tensor([-26.8924])}"
+       "-394273.06"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "control.clusters['reg_cluster'].coefs"
+    "pd.Series(control.loss_record).diff()[1:].sum()"
    ]
   }
  ],
