Recursive Node complete

--- a/rnn_testbed.ipynb
+++ b/rnn_testbed.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch as pt\n",
+    "import tqdm\n",
     "from scipy.linalg import qr\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from ml_lib.clusters.root_cluster import RootCluster as Root\n",
+    "#from ml_lib.clusters.root_cluster import RootCluster as Root\n",
     "from ml_lib.clusters.data_cluster import DataCluster as Data\n",
     "from ml_lib.clusters.dense_cluster import DenseCluster as Dense\n",
+    "from ml_lib.clusters.recurse_cluster import RecurseCluster as Recurse\n",
     "from ml_lib.controllers.controller import Controller as Control\n",
     "\n",
     "from ml_lib.utils import learners, inits, activators\n",
@@ -30,11 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv(\n",
-    "    'data_files/kc_house_data.csv',\n",
-    "    index_col = 'id', parse_dates = ['date'], date_parser = lambda x: pd.datetime.strptime(x, '%Y%m%dT%H%M%S')\n",
-    ")\n",
-    "dataset = dataset[[col for col in dataset.columns if not col.endswith('15')]]"
+    "dataset = pd.read_csv('data_files/market_data.csv', index_col = 'record_date')\n",
+    "dataset = pd.DataFrame(index = pd.date_range(dataset.index.min(), dataset.index.max())).join(\n",
+    "    dataset, how = 'left'\n",
+    ").fillna(method = 'ffill').fillna(method = 'bfill')\n",
+    "\n",
+    "offset_suffix = 'next'\n",
+    "dataset = dataset.join(dataset.shift(), how = 'left', rsuffix = '_%s' % offset_suffix).dropna()"
    ]
   },
   {
@@ -43,81 +47,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_cols = ['sqft_living', 'bedrooms', 'bathrooms']\n",
-    "target_cols = ['price']\n",
-    "\n",
-    "learner = learners.ADAM\n",
-    "learn_params = {\n",
-    "    'learn_rate': 1e-0,\n",
-    "    'scale_features': True\n",
-    "}\n",
-    "\n",
+    "feature_cols = ['avg_price']\n",
+    "target_cols = ['%s_%s' % (col, offset_suffix) for col in feature_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "init = inits.Orthogonal\n",
     "init_params = {\n",
     "    'xavier': True\n",
     "}\n",
     "\n",
-    "activator = activators.ReLU\n",
-    "activator_params = {}\n",
+    "learner = learners.ADAM\n",
+    "learn_params = {\n",
+    "    'learn_rate': 1e-0,\n",
+    "    'scale_features': False\n",
+    "}\n",
     "\n",
     "control = Control()\n",
     "control.add_cluster(\n",
     "    Data('data_cluster', dataset[feature_cols + target_cols])\n",
     ")\n",
     "control.add_link(\n",
-    "    Dense(\n",
-    "        'reg_cluster_1',\n",
-    "        512,\n",
-    "        weight_init = init, weight_init_params = init_params,\n",
-    "        activator = activator, activator_params = activator_params,\n",
+    "    Recurse(\n",
+    "        'recurse_cluster',\n",
     "        learner = learner, learner_params = learn_params\n",
     "    ),\n",
     "    'data_cluster', 'input', data_cols = feature_cols\n",
     ")\n",
     "control.add_link(\n",
     "    Dense(\n",
-    "        'reg_cluster_2',\n",
-    "        128,\n",
-    "        weight_init = init, weight_init_params = init_params,\n",
-    "        activator = activator, activator_params = activator_params,\n",
-    "        learner = learner, learner_params = learn_params\n",
-    "    ),\n",
-    "    'reg_cluster_1', 'input'\n",
-    ")\n",
-    "control.add_link(\n",
-    "    Dense(\n",
-    "        'reg_cluster_3',\n",
-    "        32,\n",
-    "        weight_init = init, weight_init_params = init_params,\n",
-    "        activator = activator, activator_params = activator_params,\n",
-    "        learner = learner, learner_params = learn_params\n",
-    "    ),\n",
-    "    'reg_cluster_2', 'input'\n",
-    ")\n",
-    "control.add_link(\n",
-    "    Dense(\n",
-    "        'reg_cluster_out',\n",
-    "        1,\n",
+    "        'dense_cluster',\n",
+    "        len(target_cols),\n",
     "        weight_init = init, weight_init_params = init_params,\n",
     "        learner = learner, learner_params = learn_params\n",
     "    ),\n",
-    "    'reg_cluster_3', 'input'\n",
+    "    'data_cluster', 'input', data_cols = feature_cols\n",
     ")\n",
-    "control.link_clusters('reg_cluster_out', 'data_cluster', data_cols = target_cols)\n",
+    "control.link_clusters('recurse_cluster', 'dense_cluster')\n",
+    "control.link_clusters('dense_cluster', 'data_cluster', data_cols = target_cols)\n",
     "control.init_clusters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed98cdde6f984c908476bd35cd316420",
+       "model_id": "270cd7ca848447fe883621251b96fb05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,13 +111,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -142,22 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pt.zeros(1)"
+    "plt.plot(control.loss_record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control.clusters['recurse_cluster'].Recursor.coefs"
    ]
   }
  ],
