Added Merge clusters

--- a/rnn_testbed.ipynb
+++ b/rnn_testbed.ipynb
@@ -18,13 +18,21 @@
     "from ml_lib.clusters.data_cluster import DataCluster as Data\n",
     "from ml_lib.clusters.dense_cluster import DenseCluster as Dense\n",
     "from ml_lib.clusters.recurse_cluster import RecurseCluster as Recurse\n",
+    "from ml_lib.clusters.merge_cluster import MergeCluster as Merge\n",
     "from ml_lib.controllers.controller import Controller as Control\n",
     "\n",
     "from ml_lib.utils import learners, inits, activators\n",
     "\n",
-    "#pt.set_default_tensor_type('torch.FloatTensor')\n",
-    "pt.set_default_tensor_type('torch.cuda.FloatTensor')"
+    "pt.set_default_tensor_type('torch.FloatTensor')\n",
+    "#pt.set_default_tensor_type('torch.cuda.FloatTensor')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -64,8 +72,8 @@
     "\n",
     "learner = learners.ADAM\n",
     "learn_params = {\n",
-    "    'learn_rate': 1e-0,\n",
-    "    'scale_features': False\n",
+    "    'learn_rate': 1e-1,\n",
+    "    'scale_features': True\n",
     "}\n",
     "\n",
     "control = Control()\n",
@@ -79,17 +87,7 @@
     "    ),\n",
     "    'data_cluster', 'input', data_cols = feature_cols\n",
     ")\n",
-    "control.add_link(\n",
-    "    Dense(\n",
-    "        'dense_cluster',\n",
-    "        len(target_cols),\n",
-    "        weight_init = init, weight_init_params = init_params,\n",
-    "        learner = learner, learner_params = learn_params\n",
-    "    ),\n",
-    "    'data_cluster', 'input', data_cols = feature_cols\n",
-    ")\n",
-    "control.link_clusters('recurse_cluster', 'dense_cluster')\n",
-    "control.link_clusters('dense_cluster', 'data_cluster', data_cols = target_cols)\n",
+    "control.link_clusters('recurse_cluster', 'data_cluster', data_cols = target_cols)\n",
     "control.init_clusters()"
    ]
   },
@@ -101,12 +99,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "270cd7ca848447fe883621251b96fb05",
+       "model_id": "b764ba85f3f04ffeb9119fbe467e54db",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1000), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=250), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -114,7 +112,7 @@
     }
    ],
    "source": [
-    "control.train_model(1000)"
+    "control.train_model(250)"
    ]
   },
   {
@@ -123,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(control.loss_record)"
+    "plt.plot(control.loss_record[:])"
    ]
   },
   {
@@ -132,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "control.clusters['recurse_cluster'].Recursor.coefs"
+    "control.clusters['recurse_cluster'].coefs"
    ]
   }
  ],
@@ -152,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
