Prepping for next major version

--- a/cnn_testbed.ipynb
+++ b/cnn_testbed.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch as pt\n",
-    "from scipy.linalg import qr\n",
+    "import cv2\n",
+    "from copy import deepcopy as copy\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -20,71 +21,13 @@
     "\n",
     "from ml_lib.utils import *\n",
     "\n",
-    "#pt.set_default_tensor_type('torch.FloatTensor')\n",
-    "pt.set_default_tensor_type('torch.cuda.FloatTensor')"
+    "pt.set_default_tensor_type('torch.FloatTensor')\n",
+    "#pt.set_default_tensor_type('torch.cuda.FloatTensor')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ConvolutionCluster(Root):\n",
-    "    def __init__(self, cluster_name, kernel_size, stride, input_reshape = None,\n",
-    "                 weight_init = inits.Normal, weight_init_params = {'mean': 0, 'stdev': 1},\n",
-    "                 bias_init = inits.Constant, bias_init_params = {'constant': 0},\n",
-    "                 combiner = combiners.Simple, combiner_params = {},\n",
-    "                 activator = activators.Linear, activator_params = {},\n",
-    "                 learner = learners.Gradient, learner_params = {}\n",
-    "                ):\n",
-    "        super().__init__(cluster_name)\n",
-    "        \n",
-    "        self.input_reshape = input_reshape\n",
-    "        self.kernel_size = kernel_size\n",
-    "        self.stride = stride\n",
-    "        self.Inits = {\n",
-    "            'weights': weight_init(**weight_init_params),\n",
-    "            'bias': bias_init(**bias_init_params)\n",
-    "        }\n",
-    "        self.Combiner = combiner(**combiner_params)\n",
-    "        self.Activator = activator(**activator_params)\n",
-    "        self.Learner = learner(**learner_params)\n",
-    "        self.coefs = None\n",
-    "        \n",
-    "    def init_cluster(self, reinit = False, overwrite = False):\n",
-    "        super().init_cluster(reinit = reinit)\n",
-    "        self._init_coefs(overwrite)\n",
-    "        \n",
-    "    def _init_coefs(self, overwrite):\n",
-    "        if (self.coefs is not None) & (not overwrite):\n",
-    "            raise Exception('%s: Attempting to overwrite existing coefficents when overwrite is False' % self.name)\n",
-    "        \n",
-    "        init_coefs = {\n",
-    "            'weights': self.Inits['weights'].init((np.prod(self.kernel_size), self.get_input_count())),\n",
-    "            'bias': self.Inits['bias'].init((1, self.nodes))\n",
-    "        }\n",
-    "        self.coefs = init_coefs\n",
-    "        self.best_coefs = copy(self.coefs)\n",
-    "        \n",
-    "    def deinit_cluster(self):\n",
-    "        self._deinit_coefs()\n",
-    "        \n",
-    "    def _deinit_coefs(self):\n",
-    "        self.coefs = copy(self.best_coefs)\n",
-    "        \n",
-    "    def get_input_tensor(self):\n",
-    "        self.buffers['input_tensor'] = self.buffers.get(\n",
-    "            'input_tensor',\n",
-    "            pt.cat([link_item['cluster'].get_output_tensor(self) for link_item in self.links['input']], dim = 1)\n",
-    "        )\n",
-    "        \n",
-    "        return self.buffers['input_tensor']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,215 +35,6 @@
     "test_dataset = pd.read_csv('data_files/mnist_test.csv')\n",
     "feature_cols = [col for col in dataset.columns if col.startswith('pixel')]\n",
     "target_cols = [col for col in dataset.columns if col.startswith('label_')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pixel0</th>\n",
-       "      <th>pixel1</th>\n",
-       "      <th>pixel2</th>\n",
-       "      <th>pixel3</th>\n",
-       "      <th>pixel4</th>\n",
-       "      <th>pixel5</th>\n",
-       "      <th>pixel6</th>\n",
-       "      <th>pixel7</th>\n",
-       "      <th>pixel8</th>\n",
-       "      <th>pixel9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>label_0</th>\n",
-       "      <th>label_1</th>\n",
-       "      <th>label_2</th>\n",
-       "      <th>label_3</th>\n",
-       "      <th>label_4</th>\n",
-       "      <th>label_5</th>\n",
-       "      <th>label_6</th>\n",
-       "      <th>label_7</th>\n",
-       "      <th>label_8</th>\n",
-       "      <th>label_9</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 794 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  pixel8  \\\n",
-       "0       0       0       0       0       0       0       0       0       0   \n",
-       "1       0       0       0       0       0       0       0       0       0   \n",
-       "2       0       0       0       0       0       0       0       0       0   \n",
-       "3       0       0       0       0       0       0       0       0       0   \n",
-       "4       0       0       0       0       0       0       0       0       0   \n",
-       "\n",
-       "   pixel9   ...     label_0  label_1  label_2  label_3  label_4  label_5  \\\n",
-       "0       0   ...           0        1        0        0        0        0   \n",
-       "1       0   ...           1        0        0        0        0        0   \n",
-       "2       0   ...           0        1        0        0        0        0   \n",
-       "3       0   ...           0        0        0        0        1        0   \n",
-       "4       0   ...           1        0        0        0        0        0   \n",
-       "\n",
-       "   label_6  label_7  label_8  label_9  \n",
-       "0        0        0        0        0  \n",
-       "1        0        0        0        0  \n",
-       "2        0        0        0        0  \n",
-       "3        0        0        0        0  \n",
-       "4        0        0        0        0  \n",
-       "\n",
-       "[5 rows x 794 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.head()"
    ]
   }
  ],
@@ -320,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
