Prototype first new version

--- a/regression_testbed.ipynb
+++ b/regression_testbed.ipynb
@@ -13,13 +13,6 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "#from ml_lib.clusters.root_cluster import RootCluster as Root\n",
-    "from ml_lib.clusters.data_cluster import DataCluster as Data\n",
-    "from ml_lib.clusters.dense_cluster import DenseCluster as Dense\n",
-    "from ml_lib.clusters.norm_cluster import NormCluster as Norm\n",
-    "from ml_lib.controllers.controller import Controller as Control\n",
-    "from ml_lib.utils import *\n",
-    "\n",
     "#pt.set_default_tensor_type('torch.FloatTensor')\n",
     "pt.set_default_tensor_type('torch.cuda.FloatTensor')"
    ]
@@ -30,11 +23,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ml_lib.clusters import RootCluster as Root\n",
+    "from ml_lib.clusters import DataCluster as Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = pd.read_csv(\n",
     "    'data_files/kc_house_data.csv',\n",
     "    index_col = 'id', parse_dates = ['date'], date_parser = lambda x: pd.datetime.strptime(x, '%Y%m%dT%H%M%S')\n",
     ")\n",
-    "dataset = dataset[[col for col in dataset.columns if not col.endswith('15')]]"
+    "dataset = dataset[[col for col in dataset.columns if not col.endswith('15')]]\n",
+    "feature_cols = ['sqft_living', 'bedrooms', 'bathrooms']\n",
+    "target_cols = ['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-12-17 22:58:43.615862 | N/A:data_cluster (DataCluster) - Data frame added, overwrite False\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_cluster = Data('data_cluster', dataset[feature_cols + target_cols], verbose = True)\n",
+    "root_two = Root('root_two', verbose = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-12-17 22:58:43.622622 | N/A:data_cluster (DataCluster) - Cluster root_two added to input connections.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_cluster.add_conn(root_two, 'input')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': [{'cluster': <ml_lib.clusters.RootCluster at 0x7f649fdf91d0>}],\n",
+       " 'output': []}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_cluster.connects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-12-17 22:58:43.636854 | N/A:data_cluster (DataCluster) - Cluster root_two deleted from input connections.\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_cluster.del_conn('root_two', 'input', confirm = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input': [], 'output': []}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_cluster.connects"
    ]
   }
  ],
